# dnd_lib

./: .gitignore  Cargo.toml  README.md  bacon.toml  item.json
examples/: multiclassing.rs  simple_character.rs  spellcasting.rs  spellcasting_multiclass.rs
src/: 1  asd.txt  bat  comprehensive_tests.rs  lib.rs
src/character/: ;  actions.rs  background.rs  background_tests.rs  character.rs  character_builder.rs  character_etc.rs  character_tests.rs  choice.rs  class.rs  features.rs  items.rs  mod.rs  player_character.rs  race.rs  spells.rs  stats.rs  stats_tests.rs
src/get/: background.rs  class.rs  class_tests.rs  datastore.rs  datastore_tests.rs  error.rs  feature.rs  get_page.rs  item.rs  item_list.rs  json_tools.rs  mod.rs  race.rs  race_tests.rs  spell.rs  subclass.rs  subrace.rs
src/getter/: mod.rs
src/rules2014/: background.rs  background_tests.rs  character_builder.rs  character_etc.rs  character_tests.rs  choice.rs  choice_tests.rs  class.rs  features.rs  items.rs  mod.rs  player_character.rs  race.rs  spells.rs  stats_tests.rs
src/save/: mod.rs
tests/: druid.rs  monk.rs  rogue.rs  sorcerer.rs  warlock.rs
