[package]
name = "dnd_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
rand = "0.9.2"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["std", "derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }

[features]
dnd5eapi = []
default = ["dnd5eapi"]
disk-tests = []
network-intensive-tests = ["dnd5eapi"]
integration = ["disk-tests", "network-intensive-tests"]

[package.metadata.docs.rs]
features = ["dnd5eapi"]
