[package]
name = "dnd_lib"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors =  ["YellowCoat1 <jasond3663@gmail.com>"]
description = "Dungeons & Dragons character building and management library"
repository = "https://github.com/YellowCoat1/dnd_lib"
readme = "README.md"
keywords = ["dnd", "d&d", "dnd 5e", "dungeons and dragons",  "dnd5eapi", "character sheet"]
categories = ["libraries", "data-structures", "game-development", "api-bindings"]

[dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
heck = "0.5.0"
rand = "0.9.2"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = ["http2", "charset", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["std", "derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.45.0", optional = true, features = ["macros", "rt-multi-thread"] }

[features]
dnd5eapi = ["tokio"]
item_list = ["dnd5eapi"]
default = ["dnd5eapi", "item_list"]
disk-tests = []
network-intensive-tests = ["dnd5eapi"]
integration = ["disk-tests", "network-intensive-tests"]

[package.metadata.docs.rs]
features = ["dnd5eapi"]
